[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ion-pulse-api"
version = "0.1.0"
description = "Backend API for the bilingual Ion Pulse gaming media platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.16,<2",
    "asyncpg>=0.30,<1",
    "fastapi[standard]>=0.116,<1",
    "pwdlib[argon2]>=0.3,<1",
    "pydantic-settings>=2.10,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1",
    "mypy>=1.17,<2",
    "pytest>=8.4,<9",
    "pytest-asyncio>=1.1,<2",
    "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ion_pulse"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["ion_pulse"]
plugins = ["pydantic.mypy"]
